--- a/css/frame.css
+++ b/css/frame.css
@@ -206,12 +206,12 @@ hr {
 
 .banner {
   position: relative;
-  font-size: 16px;
+  font-size: 20px;
   font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
   font-weight: 300;
   line-height: 1.5;
   overflow-x: auto;
-  background-color: #005cbf;
+  background-color: red;
   display: flex;
 }
 
